# NASCARFantasyPredictor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  coverage.yml  tests.yml
models/: nascar_model_20250701_203902.pth  nascar_model_20250701_204134.pth  nascar_model_20250701_204134.scaler  nascar_model_20250707_211158.pth  nascar_model_20250707_211158.scaler  nascar_model_20250707_213950.pth  nascar_model_20250707_213950.scaler  nascar_model_20250707_214036.pth  nascar_model_20250707_214141.pth  nascar_model_20250707_214517.pth  nascar_model_20250707_214708.pth  nascar_model_20250707_214836.pth  nascar_model_20250707_214836.scaler
nascar_fantasy_predictor/: __init__.py  cli.py
nascar_fantasy_predictor/cli/: __init__.py  main.py
nascar_fantasy_predictor/cli/commands/: analysis_commands.py  data_commands.py  maintenance_commands.py  (+2 more)
nascar_fantasy_predictor/data/: lapraptor_scraper.py
nascar_fantasy_predictor/features/: fantasy_points.py  feature_engineering.py  feature_processor.py
nascar_fantasy_predictor/interpretation/: __init__.py  feature_importance.py
nascar_fantasy_predictor/models/: __init__.py  tabular_nn.py  trainer.py
nascar_fantasy_predictor/prediction/: __init__.py  predictor.py
nascar_fantasy_predictor/utils/: __init__.py  exceptions.py  logging.py
scripts/: check_race_details.py  explore_nascar_data.py  format_lapraptor_data.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_csv_manager.py  test_fantasy_points.py  test_feature_engineering.py  test_runner.py
